Bug 493466 - TM: youtube.com customization broken (r=mrbkap).